- fix box sizing for .editable-annotation and .child .editable to make sure they have the same width  - remove manual super script position since it will be automatically handled.  - add .single-line css for auto text ellipse on url. adjust link tag position mismatch due to overflow: none  - make sure the .editable-annotation-text match with .child .editable

--- a/src/App.css
+++ b/src/App.css
@@ -550,7 +550,7 @@ a.text-link {
 
 .thought,
 .thought-annotation {
-  max-width: calc(100% - 1em); /* expand click area. offset content padding to prevent line break */
+  width: calc(100% - 1em); /* expand click area. offset content padding to prevent line break */
   /* do not set font-weight or it will override =heading style. */
   margin-top: 0;
   display: inline-block;
@@ -568,6 +568,10 @@ a.text-link {
 
 .editable-annotation {
   display: inline-block;
+  width: 100%;
+  /* Apply the same padding on .editable_annotation instead of .editable-annotation-text */
+  padding: 0 1em 0 0.333em;
+  box-sizing: border-box;
 }
 
 .thought-annotation a {
@@ -578,7 +582,7 @@ a.text-link {
 .editable-annotation-text,
 .thought-annotation .breadcrumbs {
   visibility: hidden;
-  /*color: tomato;*/
+  /* color: tomato; */
 }
 
 .subthought-highlight {
@@ -603,19 +607,21 @@ a.text-link {
   top: 0.3em;
 }
 
-.child .editable,
-.editable-annotation-text {
+.child .editable {
   /* Add some padding-right for increased click area. */
   /* Add some padding-left otherwise caret is invisible on empty elements. */
   /* Cannot use padding-top on editable, as clicking it causes the selection to go to the beginning. */
   /* Cannot use padding-bottom on editable, as clicking it causes the selection to go to the end. */
   padding: 0 1em 0 0.333em;
+  box-sizing: border-box;
+}
+
+.child .editable,
+.editable-annotation-text {
   /* slide editable up so that it overlaps with the previous thought, ensuring there is no dead click zone from clip-path */
-  margin: -0.5px -1em 0 calc(1em - 18px);
+  margin: -0.5px 0 0 calc(1em - 18px);
   /* create stacking order to position above thought-annotation so that function background color does not mask thought */
   position: relative;
-  /* Prevent the selection from being incorrectly set to the beginning of the thought when the top edge is clicked, and the end of the thought when the bottom edge is clicked. Instead, we want the usual behavior of the selection being placed near the click. */
-  clip-path: inset(0.001px 0 0.1em 0);
   /* Use minimum height to the cover the gap left by clip-path */
   min-height: 1.9em;
 }
@@ -646,11 +652,6 @@ a.text-link {
   padding-bottom: 0.5em;
   padding-top: 0.33em;
   /* A small amount of margin-bottom may make multiline thoughts feel less crunched. However, this must be prevented or overridden when the thought has a note, otherwise there will be too much space in between the thought and the note. */
-}
-
-/* padding-top */
-.editable-annotation.multiline.multiline.multiline.multiline {
-  margin-top: calc(-0.12em + 0.33em);
 }
 
 .safari .multiline.multiline.multiline.multiline {
@@ -1810,6 +1811,20 @@ h1 .num-contexts {
 .popup .modal-actions.modal-actions-stack a.button {
   margin-bottom: 0.5em;
 }
+
+.single-line {
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: calc(100% - 5rem);
+}
+
+/* Fix a tag position after overflow:hidden applined on span tag. */
+.single-line + a {
+  top: -12px;
+}
+
 @media screen and (min-width: 480px) {
   .popup .modal-actions.modal-actions-stack {
     display: flex;
